change: navigation bar, projects, about me

--- a/my-app/src/styles/NavigationBar.css
+++ b/my-app/src/styles/NavigationBar.css
@@ -1,82 +1,88 @@
 .navbar {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-top: 20px;
-    z-index: 2;
-    margin: 0 10%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 20px;
+  z-index: 2;
+  margin: 0 10%;
+}
+
+.navbar_title {
+  font-size: 20px;
+  font-weight: 600;
+  text-decoration: none;
+  color: var(--color-text);
+}
+
+.navbar_menu {
+  display: flex;
+}
+.navbar_menuBtn {
+  display: none;
+}
+
+.navbar_menuItems {
+  display: flex;
+  gap: 50px;
+  list-style: none;
+}
+
+.navbar_menuItems a {
+  font-size: 20px;
+  color: var(--color-text);
+  text-decoration: none;
+}
+.navbar_icons {
+  width: 24px; /* Changed from percentage to fixed width */
+  margin-left: 10px; /* Added margin to bring icons closer */
+}
+
+/* Added a container for icons */
+.navbar_icon_container {
+  display: flex;
+  align-items: center;
+  gap: 10px; /* Adjust this value to control space between icons */
+}
+
+@media screen and (max-width: 830px) {
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
   }
-  
-  .navbar_title {
-    font-size: 20px;
-    font-weight: 600;
-    text-decoration: none;
-    color: var(--color-text);
-  }
-  
+
   .navbar_menu {
-    display: flex;
+    position: absolute;
+    right: 0;
+    margin-right: 10%;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 11px;
+    z-index: 3;
   }
 
   .navbar_menuBtn {
-    display: none;
-  }
-  
-  .navbar_menuItems {
-    display: flex;
-    gap: 50px;
-    list-style: none;
-  }
-  
-  .navbar_menuItems a {
-    font-size: 20px;
-    color: var(--color-text);
-    text-decoration: none;
+    display: block;
+    cursor: pointer;
   }
 
-  .navbar_icons {
-    width: 3%;
+  .navbar_menuItems {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    gap: 13px;
+    border-radius: 10px;
+    background: rgb(25, 55, 109);
+    background: linear-gradient(
+      0deg,
+      rgba(25, 55, 109, 0.2) 0%,
+      rgba(25, 55, 109, 1) 100%
+    );
+    padding: 24px 33px;
+    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.25);
   }
-  
-  @media screen and (max-width: 830px) {
-    .navbar {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-  
-    .navbar_menu {
-      position: absolute;
-      right: 0;
-      margin-right: 10%;
-      flex-direction: column;
-      align-items: flex-end;
-      gap: 11px;
-      z-index: 3;
-    }
-  
-    .navbar_menuBtn {
-      display: block;
-      cursor: pointer;
-    }
-  
-    .navbar_menuItems {
-      display: none;
-      flex-direction: column;
-      align-items: center;
-      gap: 13px;
-      border-radius: 10px;
-      background: rgb(25, 55, 109);
-      background: linear-gradient(
-        0deg,
-        rgba(25, 55, 109, 0.2) 0%,
-        rgba(25, 55, 109, 1) 100%
-      );
-      padding: 24px 33px;
-      box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.25);
-    }
-    .navbar_menuOpen {
-      display: flex;
-      z-index: 1;
-    }
+  .navbar_menuOpen {
+    display: flex;
+    z-index: 1;
   }
+}
