--- a/my-app/src/styles/About.css
+++ b/my-app/src/styles/About.css
@@ -1,8 +1,6 @@
 .about_container {
     position: relative;
-    background-color: rgba(12, 12, 12, 0.6);
     border-radius: 15px;
-    padding: 73px;
     margin-top: 129px;
     z-index: 1;
     margin-left: 10%;
@@ -24,7 +22,8 @@
   }
   
   .about_img {
-    width: 35%;
+    margin: 10px;
+    width: 30%;
     border-radius: 50%;
   }
   
@@ -41,12 +40,7 @@
     align-items: center;
     border-radius: 20px;
     list-style: none;
-    padding: 25px;
-    background-image: linear-gradient(
-      90deg,
-      rgba(165, 215, 232, 0.42) 0%,
-      rgba(255, 255, 255, 0) 100%
-    );
+    padding: 25px; 
     background-size: 0 100%;
     background-repeat: no-repeat;
     transition: 0.4s;
@@ -57,12 +51,12 @@
   }
   
   .about_item h3 {
-    font-size: 25px;
+    font-size: 30px;
     font-weight: 600;
   }
   
   .about_item p {
-    font-size: 25px;
+    font-size: 20px;
   }
   
   @media screen and (max-width: 830px) {
