--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -4,6 +4,10 @@
     font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 .app {
     width: 100%;
     height: 100%;
