--- a/my-app/src/styles/Intro.css
+++ b/my-app/src/styles/Intro.css
@@ -1,4 +1,4 @@
-.hero_container {
+.intro_container {
   position: relative;
   display: flex;
   align-items: center;
@@ -55,7 +55,7 @@
   z-index: 1;
 }
 
-.hero_title {
+.intro_title {
   font-size: 60px;
   font-weight: 900;
   margin-bottom: 25px;
@@ -77,7 +77,7 @@
   box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.25);
 }
   
-.hero_img {
+.intro_img {
   width: 40%;
   z-index: 1;
   border-radius: 100%;
@@ -127,12 +127,27 @@
   z-index: 0;
 }
   
-@media screen and (max-width: 830px) {
-  .hero_container {
+@media screen and (max-width: 768px) {
+  .intro_container {
     flex-direction: column-reverse;
+  }
+
+  .intro_img {
+    width: 100%;
+    z-index: 2;
+    animation-name: floating;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
   }
 
   .hero_content {
     align-items: center;
+  }
+
+  .intro_title {
+    font-size: 50px;
+    margin-top: -17px;
+    z-index: 1;
   }
 }
