--- a/my-app/src/styles/NavigationBar.css
+++ b/my-app/src/styles/NavigationBar.css
@@ -52,10 +52,19 @@
     align-items: flex-start;
   }
 
+  .navbar_icon_container {
+    display: none;
+  }
+
+  .navbar_title {
+    font-size: 25px;
+    margin-bottom: 11px;
+  }
+
   .navbar_menu {
     position: absolute;
     right: 0;
-    margin-right: 10%;
+    margin-right: 2%;
     flex-direction: column;
     align-items: flex-end;
     gap: 11px;
@@ -65,23 +74,32 @@
   .navbar_menuBtn {
     display: block;
     cursor: pointer;
+    width: 50%;
+    margin-top: -5px;
+    z-index: 10;
   }
 
   .navbar_menuItems {
     display: none;
     flex-direction: column;
     align-items: center;
-    gap: 13px;
-    border-radius: 10px;
-    background: rgb(25, 55, 109);
-    background: linear-gradient(
-      0deg,
-      rgba(25, 55, 109, 0.2) 0%,
-      rgba(25, 55, 109, 1) 100%
-    );
-    padding: 24px 33px;
-    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.25);
+    gap: 40px;
+    border-radius: 0; 
+    padding: 0; 
+    width: 100vw; 
+    height: 100vh; 
+    position: fixed; 
+    top: 0; 
+    left: 0; 
+    box-shadow: none; 
+    background-color: rgb(13, 27, 42); 
+    padding-top: 20%;
   }
+
+  .navbar_menuItems a {
+    font-size: 40px;
+  }
+
   .navbar_menuOpen {
     display: flex;
     z-index: 1;
