--- a/my-app/src/styles/Footer.css
+++ b/my-app/src/styles/Footer.css
@@ -37,3 +37,12 @@
     margin-top: -10px;
     font-size: 12px;
 }
+
+@media (max-width: 768px) {
+    .footer_icon {
+        width: 5%;
+        height: auto;
+        transition: opacity 0.3s ease;
+        opacity: 0.7;
+    }
+}
